Added preferred to the eduBadges consumed endpoint To determine which name to use as validated name, eduBadges needs to know which linked account is preferred.